--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="gps_msg">O GPS não está ativo. Você gostaria de ir as configurações e ativa-lo?</string>
     <string name="cancel">Cancelar</string>
     <string name="settings">Configurações</string>
-    <string name="title_activity_pesquisa">Pesquisa</string>
+    <string name="title_activity_pesquisa">Pesquisar</string>
     <string name="pesquisa_title">Pesquisar lugares</string>
     <string name="campo_endereco">Endereço:</string>
     <string name="campo_fax">Fax:</string>
@@ -31,8 +31,5 @@
     <string name="campo_autor">Autor:</string>
     <string name="campo_inauguracao">Inauguração:</string>
     <string name="campo_localizacao">Localização:</string>
-    <string name="title_activity_pesquisas_recentes">PesquisasRecentesActivity</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_activity_pesquisas_recentes">Pesquisas Recentes</string>
 </resources>
